--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "author": "",
   "license": "MIT",
-  "devDependencies": {
-    "node-sass": "^4.13.0"
+  "devDependencies": {},
+  "dependencies": {
+    "node-sass": "^4.12.0"
   }
 }
