--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "compile:sass": "sass sass/main.scss css/style.css -w"
   },
   "author": "",
   "license": "MIT",
-  "devDependencies": {},
-  "dependencies": {
-    "node-sass": "^4.13.0"
+  "devDependencies": {
+    "sass": "^1.51.0"
   }
 }
